[package]
name = "rust-tone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14.0"
ndarray-npy = "0.8.1"
rustfft = "6.1.0"
rustdct = "0.7.1"
plotters = "0.3"
image = "0.24.6"
hound = "3.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"